force-app/main/default/objects/Activity/fields/Case_Safe_Activity_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_Safe_Activity_ID__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Safe Activity ID</label>
    <type>Text</type>
</CustomField>