force-app/main/default/objects/Activity/fields/ClosedDate__c.field-meta.xml
<CustomField>
    <fullName>ClosedDate__c</fullName>
    <formula>CompletedDateTime</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date/Time Closed</label>
    <type>DateTime</type>
</CustomField>