force-app/main/default/objects/Activity/fields/Enqix_Case_Agent__c.field-meta.xml
<CustomField>
    <fullName>Enqix_Case_Agent__c</fullName>
    <label>Enqix Case Agent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>