force-app/main/default/objects/Activity/fields/Promised_Amount__c.field-meta.xml
<CustomField>
    <fullName>Promised_Amount__c</fullName>
    <label>Promised Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>