force-app/main/default/objects/Activity/fields/Quality_check_feedback__c.field-meta.xml
<CustomField>
    <fullName>Quality_check_feedback__c</fullName>
    <label>Quality check feedback</label>
    <type>TextArea</type>
</CustomField>