force-app/main/default/objects/Activity/fields/Support_Log_Seq_ID__c.field-meta.xml
<CustomField>
    <fullName>Support_Log_Seq_ID__c</fullName>
    <externalId>true</externalId>
    <label>Support Log Seq ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>